# django-full-stack-web-developer-bootcamp

./: .replit  README.md  pyproject.toml
02-HTML_Level_Two/: Part3_Table_Quiz.html
03-CSS_Level_One/: CSS_Level_One_Assessment.css
04-CSS_Level_Two/: Practice.css  Practice.html
05-Capstone_Project_One/: My_Landing.css  My_Landing_Page.html  My_thankyou.html
06-Bootstrap/: Practice_Landing_Page.html  Practice_SignUp.html
07-JavaScript_Level_One/: Part3_Exercise.html  Part3_Exercise.js  Part8_Loops_Exercise.js  Part9_JS_Project.js
08-Javascript_Level_Two/: Part2_Function_Exercises.js  Part4_Array_Exercise.js  Part6_Objects_Exercise.js  Practice.html
09-Document_Object_Model/: Main.html  Main.js  Part1_MainPage.html
10-jQuery/: Connect_Four.html  Part1_MyDocument.html
12-Python_Level_One/: Part10_Simple_Game.py  Part6_Exercise_Review.py  Part9_Functions_Exercises.py
13-Python_Level_Two/: Part8_Regular_Expressions.py
14-Django_Level_One/ProTwo/: db.sqlite3  populate.py
14-Django_Level_One/TestProject/: db.sqlite3  populate_TestApp.py
14-Django_Level_One/my_first_project/: db.sqlite3  populate_my_first_app.py
15-Django_Level_Two/Challenge_Project/: manage.py
15-Django_Level_Two/MyProTwo/: db.sqlite3  manage.py  populate_MyAppTwo.py
15-Django_Level_Two/My_ProTwo/: db.sqlite3  manage.py
15-Django_Level_Two/ProTwo/: db.sqlite3
15-Django_Level_Two/mysite/: db.sqlite3  sql.txt
16-Django_Level_Three/LearningTemplates/: db.sqlite3
16-Django_Level_Three/MyBasicApp/: apps.py
16-Django_Level_Three/My_ProTwo/: db.sqlite3  (+1 more)
MyDjangoEnv/: pyvenv.cfg
(+171 files in other folders)
