[tool.poetry]
name = "django-full-stack-web-developer-bootcamp"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"
django-braces = "^1.14.0"
faker = "^4.14.1"
misaka = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
